# enigma2

./: configure.ac
.github/workflows/: enigma2.yml
data/: Makefile.am  keymap.xml  menu.xml  remotes.xml  setup.xml
data/display/: skin_display_gbquadplus.xml  skin_display_osmini4k.xml  skin_display_vuduo2.xml
data/remotes/: Makefile.am
data/skin_default/: skin.xml
data/skin_default/icons/: Makefile.am
doc/: SETUP
lib/driver/: rc.h  rcinput.cpp
lib/dvb/: frontend.cpp
lib/dvb_ci/: dvbci.cpp
lib/gui/: elistbox.cpp  elistbox.h  elistboxcontent.cpp
lib/python/: Navigation.py  RecordTimer.py  StartEnigma.py  enigma_python.i  keymapparser.py  python.h  skin.py
lib/python/Components/: AVSwitch.py  ChoiceList.py  ConfigList.py  Console.py  EpgList.py  FileList.py  Harddisk.py  HdmiCec.py  ImportChannels.py  InputDevice.py  International.py  Keyboard.py  Makefile.am  MediaPlayer.py  MovieList.py  NetworkTime.py  Opkg.py  PluginComponent.py  PluginList.py  RecordingConfig.py  ScrollLabel.py  ServiceList.py  SetupDevices.py  SystemInfo.py  TimerList.py  TimerSanityCheck.py  Timezones.py  UsageConfig.py  VolumeControl.py  config.py
lib/python/Components/Converter/: Makefile.am
lib/python/Components/Renderer/: FrontpanelLed.py  Makefile.am
lib/python/Components/Sources/: Makefile.am
lib/python/Plugins/: Makefile.am
lib/python/Plugins/Extensions/: Makefile.am
lib/python/Plugins/Extensions/GraphMultiEPG/: GraphMultiEpg.py  GraphMultiEpgSetup.py
lib/python/Plugins/Extensions/MediaPlayer/: plugin.py
lib/python/Plugins/Extensions/PicturePlayer/: ui.py
lib/python/Plugins/Extensions/SocketMMI/: SocketMMI.py
lib/python/Plugins/SystemPlugins/CommonInterfaceAssignment/: plugin.py
lib/python/Plugins/SystemPlugins/FastScan/: plugin.py
lib/python/Plugins/SystemPlugins/NetworkWizard/: NetworkWizard.py  networkwizard.xml
lib/python/Plugins/SystemPlugins/OSD3DSetup/: plugin.py
lib/python/Plugins/SystemPlugins/PositionerSetup/: ui.py
lib/python/Plugins/SystemPlugins/SoftwareManager/: SoftwareTools.py  plugin.py
lib/python/Plugins/SystemPlugins/VideoEnhancement/: VideoEnhancement.py
lib/python/Plugins/SystemPlugins/Videomode/: VideoHardware.py  VideoWizard.py
lib/python/Screens/: About.py  ChannelSelection.py  CommonInterface.py  EpgSelection.py  FactoryReset.py  FlashImage.py  HarddiskSetup.py  HelpMenu.py  Hotkey.py  InfoBar.py  InfoBarGenerics.py  InputDeviceSetup.py  LocaleSelection.py  LocationBox.py  Makefile.am  Menu.py  MessageBox.py  MovieSelection.py  MultiBootManager.py  NetworkSetup.py  PluginBrowser.py  Satconfig.py  ScanSetup.py  Screen.py  ServiceInfo.py  ServiceScan.py  Setup.py  SoftcamSetup.py  SoftwareUpdate.py  Standby.py  StartWizard.py  Time.py  VirtualKeyBoard.py  VolumeAdjust.py  Wizard.py
lib/python/Tools/: Alternatives.py  CIHelper.py  CamControl.py  Directories.py  Geolocation.py  Makefile.am  MultiBoot.py  Notifications.py  NumericalTextInput.py  Profile.py  StbHardware.py  Trashcan.py
lib/service/: servicedvb.cpp  servicedvd.cpp
main/: bsod.cpp  enigma.cpp
po/: Makefile.am  el_GR.po  en_GB.po
tests/: enigma.py
tools/: enigma2.sh.in
