installdir = $(pkglibdir)/python/Components

SUBDIRS = Sources Converter Renderer

install_PYTHON = \
	__init__.py \
	About.py \
	ActionMap.py \
	AVSwitch.py \
	BlinkingPixmap.py \
	Button.py \
	ChoiceList.py \
	Clock.py \
	ConditionalWidget.py \
	config.py \
	ConfigList.py \
	Console.py \
	DiskInfo.py \
	Element.py \
	EpgList.py \
	FanControl.py \
	FIFOList.py \
	FileList.py \
	GUIComponent.py \
	Harddisk.py \
	HdmiCec.py \
	HelpMenuList.py \
	HTMLComponent.py \
	ImportChannels.py \
	Input.py \
	InputDevice.py \
	InputHotplug.py \
	International.py \
	Keyboard.py \
	Label.py \
	Language.py \
	Lcd.py \
	MediaPlayer.py \
	MenuList.py \
	MovieList.py \
	MultiContent.py \
	Netlink.py \
	Network.py \
	NimManager.py \
	Opkg.py \
	PackageInfo.py \
	ParentalControl.py \
	PerServiceDisplay.py \
	Pixmap.py \
	Playlist.py \
	PluginComponent.py \
	PluginList.py \
	ProgressBar.py \
	RcModel.py \
	RecordingConfig.py \
	ResourceManager.py \
	RFmod.py \
	Scanner.py \
	ScrollLabel.py \
	SelectionList.py \
	Sensors.py \
	ServiceEventTracker.py \
	ServiceList.py \
	ServicePosition.py \
	ServiceScan.py \
	SetupDevices.py \
	Slider.py \
	SystemInfo.py \
	Task.py \
	TimerList.py \
	TimerSanityCheck.py \
	Timezones.py \
	TunerInfo.py \
	TuneTest.py \
	UsageConfig.py \
	VariableText.py \
	VariableValue.py \
	VideoWindow.py \
	VolumeBar.py \
	VolumeControl.py
