installdir = $(pkglibdir)/python/Tools

install_PYTHON = \
	__init__.py \
	Alternatives.py \
	ASCIItranslit.py \
	BoundFunction.py \
	camcontrol.py \
	CIHelper.py \
	CList.py \
	CountryCodes.py \
	Directories.py \
	Downloader.py \
	Event.py \
	FallbackTimer.py \
	FuzzyDate.py \
	Geolocation.py \
	GetEcmInfo.py \
	HardwareInfo.py \
	Import.py \
	ISO639.py \
	KeyBindings.py \
	LoadPixmap.py \
	Multiboot.py \
	Notifications.py \
	NumericalTextInput.py \
	Profile.py \
	RedirectOutput.py \
	StbHardware.py \
	TextBoundary.py \
	Transponder.py \
	Trashcan.py \
	XMLTools.py
