installdir = $(pkglibdir)/python/Components/Converter

install_PYTHON = \
	__init__.py \
	AnalogClock.py \
	ClientsStreaming.py \
	ClockToText.py \
	Combine.py \
	ConditionalShowHide.py \
	ConfigEntryTest.py \
	Converter.py \
	CryptoInfo.py \
	EventName.py \
	EventTime.py \
	FrontendInfo.py \
	genre.py \
	HddState.py \
	MenuEntryCompare.py \
	MovieInfo.py \
	PliExtraInfo.py \
	Poll.py \
	ProgressToText.py \
	RdsInfo.py \
	RemainingToText.py \
	RotorPosition.py \
	SensorToText.py \
	ServiceInfo.py \
	ServiceName.py \
	ServiceOrbitalPosition.py \
	ServicePosition.py \
	ServiceTime.py \
	StaticMultiList.py \
	StaticText.py \
	Streaming.py \
	Streaming2.py \
	StringList.py \
	StringListSelection.py \
	TemplatedMultiContent.py \
	TextCase.py \
	TransponderInfo.py \
	TunerInfo.py \
	ValueBitTest.py \
	ValueRange.py \
	ValueToPixmap.py \
	VfdDisplay.py
