installdir = $(pkglibdir)/python/Components/Renderer

install_PYTHON = \
	__init__.py \
	Canvas.py \
	ChannelNumber.py \
	CiModuleControl.py \
	FixedLabel.py \
	FrontpanelLed.py \
	GaugeRender.py \
	Label.py \
	Listbox.py \
	NextEpgInfo.py \
	Picon.py \
	Pig.py \
	Pixmap.py \
	PositionGauge.py \
	Progress.py \
	Renderer.py \
	VideoSize.py
