installdir = $(pkglibdir)/python/Components/Sources

install_PYTHON = \
	__init__.py \
	Boolean.py \
	CanvasSource.py \
	Clock.py \
	Config.py \
	CurrentService.py \
	Event.py \
	EventInfo.py \
	FrontendInfo.py \
	FrontendStatus.py \
	List.py \
	Progress.py \
	RdsDecoder.py \
	RecordState.py \
	Sensor.py \
	ServiceEvent.py \
	ServiceList.py \
	Source.py \
	StaticText.py \
	StreamService.py \
	TunerInfo.py
